// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveLabel should correctly render for RTL service 1`] = `
.emotion-0 {
  color: #B80000;
  display: inline-block;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 700;
  margin-left: 0.5rem;
}

.emotion-1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <span
    role="text"
  >
    <span
      aria-hidden="true"
      class="emotion-0"
      dir="rtl"
    >
      LIVE 
    </span>
    <span
      class="emotion-1"
      lang="en-GB"
    >
      Live, 
    </span>
  </span>
</div>
`;

exports[`LiveLabel should render correctly with custom offscreen text 1`] = `
.emotion-0 {
  color: #B80000;
  display: inline-block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  margin-right: 0.5rem;
}

.emotion-1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <span
    role="text"
  >
    <span
      aria-hidden="true"
      class="emotion-0"
      dir="ltr"
    >
      LIVE 
    </span>
    <span
      class="emotion-1"
      lang="en-GB"
    >
      Watch Live, 
    </span>
  </span>
</div>
`;

exports[`LiveLabel should render correctly with english live text 1`] = `
.emotion-0 {
  color: #B80000;
  display: inline-block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  margin-right: 0.5rem;
}

.emotion-1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <span
    role="text"
  >
    <span
      aria-hidden="true"
      class="emotion-0"
      dir="ltr"
    >
      LIVE 
    </span>
    <span
      class="emotion-1"
      lang="en-GB"
    >
      Live, 
    </span>
  </span>
</div>
`;

exports[`LiveLabel should render correctly with localised live text 1`] = `
.emotion-0 {
  color: #B80000;
  display: inline-block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  margin-right: 0.5rem;
}

<div>
  <span
    role="text"
  >
    <span
      class="emotion-0"
      dir="ltr"
    >
      AS E DE HAPPEN 
    </span>
  </span>
</div>
`;
